// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<BoxModal
  onClose={[Function]}
  open={false}
  showCloseButton={true}
>
  <ForwardRef(Stack)
    pb={3}
    px={2}
    spacing={3}
  >
    <ForwardRef(Alert)
      severity="success"
      sx={
        Object {
          "fontSize": 18,
          "fontWeight": "bold",
        }
      }
    >
      投稿が完了しました！
    </ForwardRef(Alert)>
    <ForwardRef(Typography)
      align="center"
    >
      <Link
        to="/articles/1"
      >
        title
      </Link>
    </ForwardRef(Typography)>
    <ForwardRef(Box)>
      <ForwardRef(Typography)
        align="center"
        variant="h6"
      >
        SNSでシェアしませんか？
      </ForwardRef(Typography)>
      <ShareButtons
        description="description"
        title="title"
        url="http://localhost/articles/1"
      />
    </ForwardRef(Box)>
  </ForwardRef(Stack)>
</BoxModal>
`;

exports[`Shallow Snapshot Tests draft 1`] = `
<BoxModal
  onClose={[Function]}
  open={false}
  showCloseButton={true}
>
  <ForwardRef(Stack)
    pb={3}
    px={2}
    spacing={3}
  >
    <ForwardRef(Alert)
      severity="success"
      sx={
        Object {
          "fontSize": 18,
          "fontWeight": "bold",
        }
      }
    >
      下書きに保存されました！
    </ForwardRef(Alert)>
    <ForwardRef(Typography)
      align="center"
    >
      <ForwardRef(Typography)
        component="div"
      >
        （あなただけが閲覧できます）
      </ForwardRef(Typography)>
      <Link
        to="/articles/1"
      >
        title
      </Link>
    </ForwardRef(Typography)>
  </ForwardRef(Stack)>
</BoxModal>
`;

exports[`Shallow Snapshot Tests without submitSuccessInfo 1`] = `""`;
